# sans-hackathon

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .mcp.json.sift  AGENTS.md  BUILD_PLAN_v2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  STARTUP.md  SUBMISSION_COMPLIANCE.md  SUBMISSION_NOTES.md  _extracted.txt  braindump  mkdocs.yml  pnpm-lock.yaml  requirements.txt  rust-toolchain.toml
.claude/: settings.json  settings.local.json
.claude/commands/: om-dump.md  om-standup.md  om-weekly.md  om-wrap-up.md
.claude/workflows/: judging-readiness-audit.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: budget-guard.yml  competitor-watch.yml  devpost-submit.yml  docs.yml  l0-static.yml  l1-unit.yml  l2-sift-lite.yml  l3-nightly.yml  l3-weekly-goldens.yml  release-binaries.yml  release.yml
agent-config/: AGENTS.md  GROUNDING.md  HEARTBEAT.md  JUDGING.md  MEMORY.md  PLAYBOOK.md  SOUL.md  TOOLS.md  expert-rules.json
apps/web/: README.md  next.config.ts  package.json  tsconfig.tsbuildinfo
docker/: l1-compose.yml  l1-devbase.Dockerfile  l2-siftlite.Dockerfile  swarm-postgres.yml  verdict-compose.yml  verdict-runner.Dockerfile
docs/: DATASET.md  README.md  accuracy-report.md  architecture.md  codex-compatibility.md  cryptographic-attestation.md  demo-script-a2.md  divergences-resolved.md  extending-the-tool-surface.md  false-positives.md  glossary.md  index.md  investigation-phases.md  live-test-matrix.md  onboarding.md  release-surface.md  replay-determinism.md  repo-guide.md  troubleshooting.md  verdict-semantics.md
docs/analyst/: tool-playbooks.md
docs/archive/: 2026-04-27-amendment-a4-managed-agents-runtime.md  README.md  phase-5-6-sprite-design-brief.md  protocol-sift-integration-reference.md
docs/braindumps/: 2026-04-26-agent-army-and-dashboard.md
docs/design-briefs/: phase-5-6-sprite-design-brief.md  surprise-design-exploration.md  surprise-design-iteration-log.md  surprise-design-iteration-summary.md
docs/legacy/: BUILD_PLAN_v2.md  Find_Evil_Research_and_Build_Plan-v1.docx
docs/plans/: 2026-04-23-build-swarm-plan.md  2026-04-23-orchestration-glue-plan.md  2026-04-23-product-plan.md  2026-04-23-sandbox-plan.md  2026-04-26-amendment-a3-plan.md  2026-05-20-finish-to-v-submit-plan.md  2026-06-06-seamless-integration-and-submission-plan.md  2026-06-12-align-app-with-video-claims.md  FINISH-PROMPT.md
docs/reference/: dependencies.md  environment-variables.md  mcp-and-tools.md
docs/references/: README.md  protocol-sift-integration-reference.md
docs/release-evidence/: README.md  l3-local-sift.json
evidence/: README.md
obsidian-mind/: CLAUDE.md  vault-manifest.json
packer/: sift-microvm.pkr.hcl
scripts/: _report_style.css  agent-mcp-smoke.py  autonomous-loop-smoke.py  autonomous-loop-stop.sh  autonomous-loop.py  autonomous-loop.sh  build-checker.py  build-deb.sh  build-offline-report.py  codegen-events.py  competitor-watch.sh  demo-script-smoke.py  divergence-smoke.py  doctor.sh  fetch-fixtures.sh  fetch-nist-fixture.sh  fetch-sift-ova.cjs  find-evil  find-evil-auto  find-evil-live  find-evil-run  find-evil-run-smoke.py  find-evil-sift  find_evil_auto.py  fleet-policy-smoke.py  fleet_correlate.py  fleet_investigate.py  fleet_local.py  gated-tools.json  ground_verdict.py  grounding-smoke.py  install-bootstrap-smoke.py  install-dfir-tools.sh  install.sh  ioc_enrich.py  json-to-benchmark-csv.py  l2-dfir-smoke.sh  l3-run-goldens.sh  launcher-smoke.py  make-demo-video-prep.py  (+46 more)
services/agent/: README.md  pyproject.toml
services/agent/findevil_agent/: __init__.py  config.py  contradiction.py  correlator.py  events.py  execution_claim.py  judge.py  mcp_client.py  playbook.py  replay.py  verifier.py
services/agent/findevil_agent/acp/: __init__.py  handoff.py
services/agent/findevil_agent/crypto/: __init__.py  audit_log.py  manifest.py  merkle.py  ots.py  signer.py
services/agent/findevil_agent/memory/: hooks.py  store.py
services/agent/findevil_agent/pools/: __init__.py  persistence.py
services/agent/tests/: test_acp_handoff.py  test_config.py  test_contradiction.py  test_correlation_outcomes.py  test_correlator.py  test_cross_artifact_pid_check.py  test_crypto_manifest.py  test_crypto_merkle.py  test_crypto_ots.py  test_crypto_signer.py  test_disk_artifact_routing.py  test_disk_decoded_artifacts.py  test_events.py  test_execution_claim.py  test_fault_injection.py  test_fleet_local.py  test_heartbeat_escalation.py  test_judge.py  test_mcp_client_concurrency.py  test_memory_hooks.py  test_memory_store.py  test_mft_hacking_tools.py  test_parallel_investigation.py  test_parallel_verify.py  test_playbook.py  test_pools.py  test_registry_activity.py  test_registry_persistence.py  test_resilient_call.py  test_sample_runs_verify.py  test_self_score.py  test_showcase_redispatch_run.py  test_ssh_connect_timeout.py  test_verdict_fleet_launcher.py  test_verifier.py  test_verifier_redispatch.py
services/mcp/: Cargo.toml  README.md
services/mcp/src/: lib.rs  main.rs  server.rs
services/mcp/src/crypto/: merkle.rs  mod.rs
services/mcp/src/tools/: ausearch.rs  case_open.rs  cloud_audit.rs  disk.rs  evtx_query.rs  ez_parse.rs  hayabusa_scan.rs  indx_parse.rs  journalctl_query.rs  login_accounting.rs  mod.rs  nfdump_query.rs  pcap_triage.rs  plaso_parse.rs  regf.rs  registry_query.rs  suricata_eve.rs  vel_collect.rs  vol_malfind.rs  vol_pslist.rs  vol_psscan.rs
services/mcp/tests/: bypass_paths.rs  evtx_query_smoke.rs  registry_query_smoke.rs  tool_smoke.rs  vol_pslist_smoke.rs
services/swarm/: README.md  pyproject.toml
services/swarm/findevil_swarm/: __init__.py  critic.py  main.py  night_report.py  plan_parser.py  pr_gate.py  session_guard.py  state.py  supervisor.py  watchdog.py  worktree.py
services/swarm/findevil_swarm/workers/: __init__.py  base_worker.py  python_worker.py  rust_worker.py  ts_worker.py
services/swarm/tests/: test_critic_and_gate.py  test_plan_parser.py  test_session_guard.py  test_state_schema.py  test_workers.py  test_worktree.py
(+198 files in other folders)
