[package]
name = "findevil-mcp"
version = "0.1.0"
description = "Find Evil! typed Rust MCP server — narrow DFIR tool surface, no execute_shell."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Per Spec #2 §1: a single binary + a library face so tests can
# import tool modules without spinning up the full stdio server.
[lib]
name = "findevil_mcp"
path = "src/lib.rs"

[[bin]]
name = "findevil-mcp"
path = "src/main.rs"

# Dependency pins per Spec #2 §16.
# rmcp, evtx, rs_merkle, duckdb versions are locked; do not upgrade
# without a spec amendment.
[dependencies]
# rmcp is the Rust MCP SDK. Import kept dormant in this first crate
# until the full tool surface lands — lib.rs exposes types the
# server will consume, plus an in-process test harness.
# rmcp = { version = "=0.16.0", features = ["server", "transport-io"] }

# Hashing — stdlib-friendly sha2 crate. No pin across workspace
# since this is a transitive of downstream tools too.
sha2 = "0.10"

# omerbenamram's EVTX parser — MIT/Apache-2.0, ~1600x faster than
# python-evtx. Linked in-process per Spec #2 §16. Pinned exact per
# the spec's library version table.
evtx = "=0.11.2"

# Pure-Rust Windows Prefetch parser — MIT, supports MAM-compressed
# Win10+ format and SCCA Win7-/8.1. Used by the `prefetch_parse` tool.
# `forensic-rs` is its filesystem abstraction; we use StdVirtualFS to
# wrap the real disk.
frnsc-prefetch = "=0.13.3"
forensic-rs = "=0.13"

# omerbenamram's Master File Table parser — MIT, 100% safe Rust.
# Used by the `mft_timeline` tool. Pinned to 0.6.1 because 0.7+
# requires rustc 1.90 and our toolchain is locked at 1.88 per
# `rust-toolchain.toml` (Spec/code divergence: edition-2024 deps
# already forced 1.83 → 1.88; bumping again is a separate decision).
mft = "=0.6.1"

# frnsc-hive — MIT, ForensicRS Windows Registry hive parser. Same
# author as frnsc-prefetch (above) and integrates with forensic-rs
# (also already a dep). Used by `registry_query` for offline parsing
# of NTUSER.DAT / SYSTEM / SOFTWARE / SECURITY / SAM hives.
# notatin 1.0.1 was the first choice (Apache-2.0) but its transitive
# nom parser breaks under rustc 1.88; frnsc-hive compiles cleanly.
frnsc-hive = "=0.13.4"

# UUID v4 for deterministic case_id generation.
uuid = { version = "1", features = ["v4", "serde"] }

# Serde for the typed JSON schema the MCP server will hand to rmcp.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation for the MCP `tools/list` envelope. We
# advertise each tool's input schema via `schemars` so MCP clients
# (Claude Code, Claude Desktop, ChatGPT) can validate arguments
# before sending. 1.x is current; pinning the minor lets it patch.
schemars = { version = "1", features = ["preserve_order"] }

# thiserror for structured, documented error types.
thiserror = "1"

# Async runtime — required when rmcp integration lands; harmless now.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

# Time/chrono for ISO-8601 timestamps in the eventual audit trail.
chrono = { version = "0.4", features = ["serde"] }

# Tracing for structured logs; lightweight.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex encoding for SHA-256 fingerprints emitted on every tool result.
# Promoted from dev-dependencies because the stdio server (`src/server.rs`)
# attaches `output_sha256` hex to every successful response's `_meta`.
hex = "0.4"

[dev-dependencies]
# tempfile for per-test scratch dirs.
tempfile = "3"

[lints]
workspace = true
