# Spec #1 §3.1 + Amendment A1 — build swarm package metadata.
# Option B (A1): NO litellm, NO openai, NO anthropic SDK in runtime deps.
# Workers invoke the local `claude` CLI via subprocess; the only Anthropic
# client surface in the runtime is Claude Agent SDK subagents when the
# swarm needs to call them directly (critic, plan_parser helpers).

[project]
name = "findevil-swarm"
version = "0.1.0"
description = "Autonomous build swarm that drives Claude Code subagents to execute BUILD_PLAN_v2.md week by week."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Find Evil! team" },
]

# Runtime deps — EXACT pins per Spec #1 Acceptance Criteria "pinned versions".
dependencies = [
  # LangGraph durable graph + PostgresSaver. Per Amendment A1,
  # we use Postgres (NOT sqlite) for the swarm; laptop-sleep
  # corruption of sqlite WAL is the documented failure we avoid.
  "langgraph>=1.0.0,<2.0.0",
  "langgraph-supervisor>=0.0.14,<0.1.0",
  "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
  # Claude Agent SDK for critic + helper subagent invocations.
  # Workers do NOT use this — they shell out to `claude` CLI.
  "anthropic>=0.45,<1.0",
  # Pydantic v2 — schema on PRSpec/CriticVerdict/NightlyReport
  # and the reducer-annotated SwarmState TypedDict.
  "pydantic>=2.7,<3.0",
  # Config + CLI.
  "typing-extensions>=4.12",
  "python-dateutil>=2.9",
  # PostgreSQL driver for PostgresSaver.
  "psycopg[binary,pool]>=3.2",
  # JSONL sidecar writer — replay log format per Spec #1 §10.2.
  "orjson>=3.10",
  # structlog — nightly report + heartbeat logging per Spec #1 §10.
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7.4",
  "mypy>=1.11",
]

[project.scripts]
# Spec #1 §3.1 + Amendment A1 — CLI entry point.
findevil-swarm = "findevil_swarm.main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["findevil_swarm"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".wt/**", "logs/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  # Allow long lines in docstrings + tests.
  "E501",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: requires Docker Postgres running (docker compose -f ../../docker/swarm-postgres.yml up -d)",
  "claude_cli: requires local `claude` CLI with a live Claude Code session",
  "slow: test takes more than ~5s",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:langgraph.*",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
